completed types of gutters custom post type query on home page, more styling and spacing, fixed menu at top, added home icon

--- a/wp-content/themes/eval/resources/scss/screen.scss
+++ b/wp-content/themes/eval/resources/scss/screen.scss
@@ -1,120 +1,160 @@
 h1 {
-    font-size: 28px;
-    font-weight: 700;
+  font-size: 28px;
+  font-weight: 700;
 }
 
 h2 {
-    font-size: 34px;
-    line-height: 1.5em;
-    font-weight: 700;
+  font-size: 34px;
+  line-height: 1.4em;
+  font-weight: 700;
 }
 
 h3 {
-    font-size: 24px;
-    line-height: 1.3em;
-    font-weight: 600;
+  font-size: 24px;
+  line-height: 1.3em;
+  font-weight: 600;
+}
+
+h4 {
+  font-size: 16px;
+  line-height: 1.2em;
+  font-weight: 600;
 }
 
 p {
-    color: rgb(145, 145, 145);
-    line-height: 1.2em;
+  color: rgb(145, 145, 145);
+  line-height: 1.2em;
+  font-size: 14px;
 }
 
 header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+
+  #site-title {
+    font-weight: 600px;
+    font-size: 20px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
 
-
-
-    #site-title {
-        font-weight: 600px;
-        font-size: 20px;
-        display: flex;
-
-        #home-icon {
-            margin-right: 1rem;
-        }
+    .headline {
+        margin-top: 2px;
     }
 
-    ul#menu-menu-1 {
-        display: flex;
-        list-style: none;
-        padding: 0;
-
-        li {
-            margin-right: 1rem;
-
-            a {
-                color: black;
-            }
-        }
+    .home-icon {
+      color: darkgray;
+      margin-right: 10px;
+      font-size: 16px;
     }
+  }
+
+  .headline {
+    font-size: 18px;
+  }
+
+  ul#menu-menu-1 {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    align-items: center;
+
+    li {
+      margin-right: 1rem;
+
+      a {
+        color: black;
+      }
+    }
+  }
 }
-
 
 footer {
-    /* Style the links inside the navigation bar */
-    .bottomMenu 
-    {
+  /* Style the links inside the navigation bar */
+  .bottomMenu {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 
-        background-color: #333;
-        overflow: hidden;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
+    li {
+      display: inline-block;
 
-        li {
-            display: inline-block;
+      a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
 
-            a {
-                float: left;
-                display: block;
-                color: #f2f2f2;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-                font-size: 17px;
-              }
-              
-              /* Change the color of links on hover */
-              a:hover {
-                background-color: #ddd;
-                color: black;
-              }
-        }
-       
-          
+      /* Change the color of links on hover */
+      a:hover {
+        background-color: #ddd;
+        color: black;
+      }
     }
-
+  }
 }
-
 
 // HOMEPAGE STYLES
 
 .entry-content {
-    > .gb-container {
-        padding: 75px;
+  > .gb-container {
+    padding: 75px;
+  }
+}
+
+.home {
+  .product-list {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    text-align: center;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 20px;
+
+    li {
+      width: 200px;
+
+      a {
+        text-decoration: none;
+        color: black;
+      }
+      img {
+        width: 150px;
+        height: 150px;
+        margin-bottom: 4px;
+      }
     }
+  }
 }
 
 .home-page-brief-container {
-    // min-width: 500px;
+  // min-width: 500px;
+  p.we-provide {
+    max-width: 380px;
+    margin-bottom: 10px;
+  }
 }
 
 .testimonial-wrapper {
-    max-width: 700px;
+  max-width: 700px;
 
-    .testimonial-heading-wrapper {
-        text-align: center;
-        margin-bottom: 30px;
-    }
-    .testimonial-empty-button {
-        background-color: #f9f7f7;
-        border-radius: 4px;
-        padding: 6px 8px;
-        color: black;
-        display: inline-block;
-        // margin-bottom: 5px;
-    }
+  .testimonial-heading-wrapper {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .testimonial-empty-button {
+    background-color: #f9f7f7;
+    border-radius: 4px;
+    padding: 6px 8px;
+    color: black;
+    display: inline-block;
+    // margin-bottom: 5px;
+  }
 }
-
